--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,21 +5,123 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.header {
+  padding: 20px 0;
 }
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 40px;
+}
+
+.nav-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: #747bff;
+}
+
+body{
+max-width: auto;
+display: block;
+box-sizing: border-box;
+background-color: #FFFFFF;
+ margin-top: 20px;
+ margin-left: auto;
+ margin-right: auto;
+  }
+
+
+.gallery {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.photo {
+  display: block;
+  border-radius: 10px;
+  width: 360px;
+  height: 240px;
+  contain: content;
+
+}
+
+form {
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 24px;
+
+}
+input {
+  width: 272px;
+  height: 42px;
+  padding: 18 px, 16px;
+  border-radius: 8px;
+}
+
+
+button {
+width: 88px;
+height: 46px;
+border-radius: 8px;
+background-color: #4eff63;
+color: #FFFFFF;
+font-size: 14px;
+}
+
+
+.photo-information-container {
+  display: block;
+  align-items: center;
+  width: 160px;
+  height: 160px;
+}
+
+
+.loader {
+  border: 8px double #d2ecaa;
+  border-radius: 50%;
+  border-top: 8px solid #38db69;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -25px;
+  margin-left: -25px;
+}
+
+.hidden {
+  display: none;}
+
+
+  @-webkit-keyframes spin {
+    0% {
+      -webkit-transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
